# NFT-data-sharing-simulator

./: .gitmodules  README.md  package.json  pnpm-lock.yaml
app/: globals.css  page.tsx
components/: connect-wallet-dialog.tsx  create-entity-dialog.tsx  create-nft-dialog.tsx  entity-card.tsx  generate-owner-dialog.tsx  header.tsx  keys-dialog.tsx  nft-data-dialog.tsx  nft-hexagon.tsx  owner-card.tsx  owners-list.tsx  permission-requests-dialog.tsx  previous-owner-card.tsx  revoke-permissions-dialog.tsx  timeline.tsx  transfer-nft-dialog.tsx  view-all-data-dialog.tsx  welcome-dialog.tsx  (+1 more)
nft-data-sharing-contract/: .gitignore  CRYPTO_IMPLEMENTATION.md  Cargo.toml  DEPLOY_GUIDE.md  DEPLOY_SUCCESS.md  DEPLOY_SUMMARY.md  Makefile  NEXT_STEPS_COMPLETED.md  README.md  STELLAR_DEPLOY_GUIDE.md  TECHNICAL_DOCS.md  TROUBLESHOOTING.md  analytics-dashboard.html  cpf_encrypted.json  cpf_key.json  deploy-basic.html  deploy-fixed.html  deploy-local.html  deploy-stellar.sh  encryption-utils.js  env.example  error-fixed.html  evm-error-fix.html  exp_key.json  exp_value.json  foundry.toml  key.json  main-contract-fixed.html  nome_key.json  nome_value.json  override-error-fixed.html  package.json  stellar-deploy-guide.html  system_addr.json
nft-data-sharing-contract/examples/: NFTDataSharingExample.sol
nft-data-sharing-contract/script/: Deploy.s.sol
nft-data-sharing-contract/src/: NFTDataSharing.sol  NFTDataSharingBasic.sol  NFTDataSharingFixed.sol  NFTDataSharingMinimal.sol  NFTDataSharingSimple.sol  lib.rs
nft-data-sharing-contract/test/: NFTDataSharing.t.sol  TestUtils.sol
(+5 files in other folders)
