[package]
name = "nft-data-sharing"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "20.1.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"

[dev-dependencies]
soroban-sdk = { version = "20.1.0", features = ["testutils"] }
